--- a/popup.html
+++ b/popup.html
@@ -30,7 +30,7 @@
 			border-bottom: 0.5px solid #dadada;
 		}
 		.logo {
-			font-size: 13px;
+			font-size: 18px;
 		}
 		img{
 			width: 30px;
@@ -38,6 +38,10 @@
 		.modal-header{
 			align-items: centre;
 			border-bottom: 0.5px solid #dadada;
+		}
+		.myButton{
+			font-size: 16px;
+			margin: 5px;
 		}
 		
 	</style>
@@ -51,6 +55,9 @@
 	</div>
 	<div class="modal-content">
 		<p>Easily detect deep fakes</p>
+	</div>
+	<div>
+		<button class="myButton">Turn On</button>
 	</div>
 </body>
 </html>
