--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Don't be Fake</title>
+		<title>DeFake</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,11 +21,11 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<h1><a href="index.html" id="logo">Don't Be Fake</a></h1><br><br>
-<form method="post" action="#">
+								<h1><a href="index.html" id="logo">DeFake</a></h1><p>A deepfake video scanner</p><br><br>
+							<form method="post" action="#">
 								<div class="fields">
 									<div class="field">
-										<p style="text-align: center">Enter Video URL to Scan For Deepfake</p>
+										<p style="text-align: center">Enter Video URL to Scan For Deepfakes</p>
 										<input type="text" name="name" id="name" />
 									</div>
 									<br>
@@ -45,8 +45,7 @@
 					<header>
 						<h2>The Problems with <strong>DeepFakes</strong></h2>
 						<p>
-							A (free) responsive site template by <a href="http://html5up.net">HTML5 UP</a>.
-							Built with HTML5/CSS3 and released under the <a href="http://html5up.net/license">CCA</a> license.
+							The upcoming election season is predicted to be drowned out by mass influx of fake news. Deepfakes are a new method to impersonate famous figures saying fictional things, and could be particularly influential in the outcome of this and future elections. With international misinformation becoming more common, we wanted to develop a level of protection and reality for users.
 						</p>
 					</header>
 				</section>
